--- a/requirements.txt
+++ b/requirements.txt
@@ -36,4 +36,5 @@ requests>=2.28.1
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz#egg=en_core_web_sm
 
 fuzzywuzzy
+termcolor
 
